[package]
name = "nightraid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4.34"
async-trait = "0.1.77"
ezsockets = { version = "0.6.2", features = ["tungstenite"] }
shlex = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
